Fix sidebar overlap on mobile

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -272,7 +272,7 @@ ol.unstyled, ul.unstyled
     &.opened
       left: 0
       overflow-y: scroll
-      z-index: 201
+      z-index: 199
 
   @media screen and (max-width: $break-extra-small)
     padding: 25px 50px !important
